# jdaviz_vue3_migration

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.jupyter/labconfig/: page_config.json
env/: pyproject.toml
scripts/: init.sh  setup-and-start-jupyter.sh  show-jupyter-url.sh  start-jupyter.sh  update.sh
